--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <div class="card-block">
                             <h4 class="card-title">Шифрование</h4>
                             <p class="card-text">Шифрование и дешифрование методом эллиптических кривых</p>
-                            <a href="index-1.html" class="btn btn-success-outline">Посчитать</a>
+                            <a href="index-1.html" class="btn btn-success-outline">Далее</a>
                         </div>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                         <div class="card-block">
                             <h4 class="card-title">Обмен ключами</h4>
                             <p class="card-text">Обмен ключами основаясь на метод эллиптических кривых</p>
-                            <a href="index-2.html" class="btn btn-success-outline">Посчитать</a>
+                            <a href="index-2.html" class="btn btn-success-outline">Далее</a>
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                         <div class="card-block">
                             <h4 class="card-title">Электронная подпись</h4>
                             <p class="card-text">Электронная подпись, основываясь на метод эллиптических кривых</p>
-                            <a href="index-3.html" class="btn btn-success-outline">Посчитать</a>
+                            <a href="index-3.html" class="btn btn-success-outline">Далее</a>
                         </div>
                     </div>
                 </div>
